# redshift-loader

./: .gitignore  LICENSE  README.md  pyproject.toml
columns_mappings/: example.json
presets/: example.sh
redshift_loader/: cli.py  loader.py  utils.py
