[tool.poetry]
name = "redshift-loader"
version = "0.1.0"
description = ""
authors = ["Marçal Pla <marcal@taleia.software>"]
license = "MIT License"
readme = "README.md"
exclude = ["columns_mappings", "presets"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
redshift-connector = "^2.1.3"
pandas = "^2.2.3"
boto3 = "^1.35.41"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
pyarrow = "^17.0.0"
chardet = "^5.2.0"

[tool.poetry.scripts]
redshift-loader = "redshift_loader.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
